<resources>
    <string name="app_name">Amebo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amebo">Amebo</string>
    <string name="let_s_keep_the_conversation_going">Let\'s keep the conversation going</string>
    <string name="create_new_account">Create new account</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="user_str">user name</string>
    <string name="hellllloo">hellllloo</string>
    <string name="logout">LogOut</string>
    <string name="username_">username</string>
    <string name="send_message">send message</string>
    <string name="write_message_here">Write message here..</string>
    <string name="messaging">messaging</string>
</resources>